classed vmware, still working on script to create update scripts... but I'll get there

--- a/settings.ini
+++ b/settings.ini
@@ -11,26 +11,26 @@ extension = ".vmx"
 ; Name of your base image
 base_image = "baseImage"
 
+; GuestOS username
+user = "root"
+
+; GuestOS password
+pass = "toor"
 
 [git]
 ; Your Git repo local folder location inside the guest
-my_git_directory_on_linux = "/root/MyGit"
+my_git_directory = "/root/MyGit"
 
 ; Third party Git Repo local folder location inside the guest
-their_git_directory_on_linux = "/root/TheirGit"
+external_git_directory = "/root/ExternalGit"
 
-; List of My Git Repos to be cloned into my_git_directory_on_linux
-[my_repos]
+; List of My Git Repos to be cloned into my_git_directory
+[git][my_git_directories]
 GoldenSnapshoter = "https://github.com/pwnageByButchy/GoldenSnapshoter.git"
 UsefulShit = "https://github.com/pwnageByButchy/UsefulShit.git"
 
-; List of Third Party Git Repos to be cloned into their_git_directory_on_linux
-[external_repos]
+; List of Third Party Git Repos to be cloned into external_git_directory
+[git][external_git_directories]
 USB-Rubber-Ducky = "https://github.com/hak5darren/USB-Rubber-Ducky.git"
 bashbunny-payloads = "https://github.com/hak5darren/bashbunny-payloads.git"
 packetsquirrel-payloads = "https://github.com/hak5darren/packetsquirrel-payloads.git"
-
-
-[guest_credentials]
-user = "root"
-pass = "toor"
