starting converting vmrun commands to os.system() commands

--- a/settings.ini
+++ b/settings.ini
@@ -1,9 +1,14 @@
 [virtualisation]
+; Location of vmrun.exe utility
+; C:\Program Files (x86)\VMware\VMware Workstation\vmrun.exe
+; or add it to your path and just specify vmrun.exe in here
+vmrun = "vmrun.exe"
+
 ; What VMWare Product are you using ws = Workstation, fusion = VMWare Fusion
 vmware_product = "ws"
 
 ; Directory of the VMs you wish to snapshot
-vm_directory = "I:/Virtual Machines"
+vm_directory = "I:\GoldenSnapshoterVMs"
 
 ; Extension of the particular type of VM (will be needed when VirtualBox support is added)
 extension = ".vmx"
