--- a/settings.ini
+++ b/settings.ini
@@ -30,12 +30,15 @@ my_git_directory = "/root/MyGit"
 external_git_directory = "/root/ExternalGit"
 
 ; List of My Git Repos to be cloned into my_git_directory
-[git][my_git_directories]
+[my_git_directories]
 GoldenSnapshoter = "https://github.com/pwnageByButchy/GoldenSnapshoter.git"
 UsefulShit = "https://github.com/pwnageByButchy/UsefulShit.git"
 
 ; List of Third Party Git Repos to be cloned into external_git_directory
-[git][external_git_directories]
+[external_git_directories]
 USB-Rubber-Ducky = "https://github.com/hak5darren/USB-Rubber-Ducky.git"
 bashbunny-payloads = "https://github.com/hak5darren/bashbunny-payloads.git"
 packetsquirrel-payloads = "https://github.com/hak5darren/packetsquirrel-payloads.git"
+impacket = "https://github.com/SecureAuthCorp/impacket.git"
+StegCracker "https://github.com/Paradoxis/StegCracker.git"
+CUPP = "https://github.com/Mebus/cupp.git"
